Fix overflow issue with too much text on small project card

--- a/src/app/components/project/project-card-small/project-card-small.component.scss
+++ b/src/app/components/project/project-card-small/project-card-small.component.scss
@@ -17,6 +17,13 @@
 
 }
 
+.project-text{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 85%;
+}
+
 @media (max-width: 768px) {
     .project-card-small {
         margin-top: 12px;
